map editor gui closer