@@ -8,7 +8,6 @@ import com.oddlabs.registration.RegistrationKey;
 import com.oddlabs.tt.delegate.Menu;
 import com.oddlabs.tt.event.LocalEventQueue;
 import com.oddlabs.tt.global.Globals;
-import com.oddlabs.tt.mapio.MapIO;
 import com.oddlabs.tt.gui.CancelButton;
 import com.oddlabs.tt.gui.CheckBox;
 import com.oddlabs.tt.gui.EditLine;
@@ -26,10 +25,7 @@ import com.oddlabs.tt.gui.PanelGroup;
 import com.oddlabs.tt.gui.PulldownButton;
 import com.oddlabs.tt.gui.PulldownItem;
 import com.oddlabs.tt.gui.PulldownMenu;
-import com.oddlabs.tt.gui.MultiColumnComboBox;
-import com.oddlabs.tt.gui.ColumnInfo;
-import com.oddlabs.tt.gui.Row;
-import com.oddlabs.tt.gui.DateLabel;
+// import removals: MultiColumnComboBox/ColumnInfo/Row/DateLabel no longer used in Single Player
 import com.oddlabs.tt.gui.Skin;
 import com.oddlabs.tt.gui.Slider;
 import com.oddlabs.tt.guievent.ItemChosenListener;
@@ -51,9 +47,8 @@ import com.oddlabs.tt.viewer.MultiplayerInGameInfo;
 import java.math.BigInteger;
 import java.util.Random;
 import java.util.ResourceBundle;
-import java.util.List;
 
-public final strictfp class TerrainMenu extends Group {
+public final class TerrainMenu extends Group {
     public static final byte SMALL = 0;
     public static final byte MEDIUM = 1;
     public static final byte LARGE = 2;
@@ -106,14 +101,8 @@ public final strictfp class TerrainMenu extends Group {
     private int seed;
     private boolean show_demo = true;
 
-    // --- Manual map selection state (single-player only) ---
-    private java.io.File selectedMapFile; // null if none
-    private MapIO.MapSummary selectedMapSummary; // peek info, may be null
-    private boolean manualMapSelected = false;
-    private Label label_selected_map; // UI label for current selection
-    private HorizButton button_clear_map; // Clear button
-    private boolean initializingUI = true; // gate change listeners during initial population
-    private Group group_map_load_row; // container for map load controls (single-player only)
+    // Manual map selection moved to Map Editor; keep Single Player focused on procedural settings.
+    // Manual map selection moved to Map Editor; keep Single Player focused on procedural settings.
 
     static {
         BigInteger max = BigInteger.ONE;
@@ -180,11 +169,11 @@ public final strictfp class TerrainMenu extends Group {
             if (Renderer.isRegistered()) standard.addChild(editline_name);
             else standard.addChild(label_default_name);
         }
-        String rated_tip =
-                Utils.getBundleString(
-                        bundle,
-                        "rated_game_tip",
-                        new Object[] {new Integer(GameSession.MIN_WINS_FOR_RANKING)});
+    String rated_tip =
+        Utils.getBundleString(
+            bundle,
+            "rated_game_tip",
+            new Object[] {Integer.valueOf(GameSession.MIN_WINS_FOR_RANKING)});
         cb_rated = new CheckBox(false, Utils.getBundleString(bundle, "rated_game"), rated_tip);
         if (multiplayer) {
             standard.addChild(cb_rated);
@@ -281,35 +270,7 @@ public final strictfp class TerrainMenu extends Group {
         pm_terrain_type.addItemChosenListener(new PulldownUpdateMapcodeListener());
         group_map_options.addChild(group_terrain_type);
 
-        // Map load row (single-player only)
-        if (!multiplayer) {
-            group_map_load_row = new Group();
-            HorizButton btn_load_map = new HorizButton("Load Map...", 120);
-            label_selected_map = new Label(currentMapLabel(), Skin.getSkin().getEditFont(), 360);
-            button_clear_map = new HorizButton("Clear", 80);
-            button_clear_map.setDisabled(true);
-            // Layout: [Load Map...] [label ....................] [Clear]
-            group_map_load_row.addChild(btn_load_map);
-            group_map_load_row.addChild(label_selected_map);
-            group_map_load_row.addChild(button_clear_map);
-            btn_load_map.place();
-            label_selected_map.place(btn_load_map, RIGHT_MID, Skin.getSkin().getFormData().getSectionSpacing());
-            button_clear_map.place(label_selected_map, RIGHT_MID, Skin.getSkin().getFormData().getSectionSpacing());
-            group_map_load_row.compileCanvas();
-            group_map_options.addChild(group_map_load_row);
-
-            // Handlers
-            btn_load_map.addMouseClickListener(new MouseClickListener() {
-                public void mouseClicked(int button, int x, int y, int clicks) {
-                    gui_root.addModalForm(new MapLoadDialog());
-                }
-            });
-            button_clear_map.addMouseClickListener(new MouseClickListener() {
-                public void mouseClicked(int button, int x, int y, int clicks) {
-                    clearManualMapSelection("user clicked Clear");
-                }
-            });
-        }
+        // Single Player manual map load/clear has been removed; use Map Editor to load maps.
 
         Group group_sliders = new Group();
         // hills
@@ -508,10 +469,7 @@ public final strictfp class TerrainMenu extends Group {
             group_size.place();
         }
         group_terrain_type.place(group_size, BOTTOM_RIGHT);
-        // Ensure map-load row (if present) is placed before compiling the options group
-        if (!multiplayer && group_map_load_row != null) {
-            group_map_load_row.place(group_terrain_type, BOTTOM_RIGHT);
-        }
+        // No Single Player map-load row
         group_map_options.compileCanvas();
         standard.addChild(group_map_options);
 
@@ -574,7 +532,7 @@ public final strictfp class TerrainMenu extends Group {
         pulldown_size.chooseItem(1);
         if (!Renderer.isRegistered()) pm_terrain_type.chooseItem(0);
 
-        initializingUI = false;
+        // end of initial UI setup
     }
 
     private final void setMapcode() {
@@ -707,9 +665,8 @@ public final strictfp class TerrainMenu extends Group {
         return button_ok;
     }
 
-    private final strictfp class CancelButtonListener implements MouseClickListener {
+    private final class CancelButtonListener implements MouseClickListener {
         public final void mouseClicked(int button, int x, int y, int clicks) {
-            if (manualMapSelected) clearManualMapSelection("left menu");
             owner.terrainMenuCancel();
         }
     }
@@ -746,11 +703,11 @@ public final strictfp class TerrainMenu extends Group {
         if (multiplayer) {
             String game_name = editline_name.getContents();
             if (game_name.length() < Game.MIN_LENGTH) {
-                String min_name =
-                        Utils.getBundleString(
-                                bundle,
-                                "min_name_length",
-                                new Object[] {new Integer(Game.MIN_LENGTH)});
+            String min_name =
+                Utils.getBundleString(
+                    bundle,
+                    "min_name_length",
+                    new Object[] {Integer.valueOf(Game.MIN_LENGTH)});
                 gui_root.addModalForm(new MessageForm(min_name));
                 return false;
             }
@@ -775,9 +732,9 @@ public final strictfp class TerrainMenu extends Group {
                         && team_pulldown_menus[i].getChosenItemIndex()
                                 != team_pulldown_menus[0].getChosenItemIndex()) has_enemy = true;
             if (!has_enemy) {
-                String min_name =
-                        Utils.getBundleString(
-                                bundle, "min_num_teams", new Object[] {new Integer(2)});
+        String min_name =
+            Utils.getBundleString(
+                bundle, "min_num_teams", new Object[] {Integer.valueOf(2)});
                 gui_root.addModalForm(new MessageForm(min_name));
                 return false;
             }
@@ -786,7 +743,7 @@ public final strictfp class TerrainMenu extends Group {
         if (owner != null) owner.terrainMenuOK();
         SelectGameMenu menu = null;
         if (multiplayer) menu = (SelectGameMenu) owner;
-        int gametype;
+    // starting game setup logging
         System.out.println(
                 "hills = "
                         + hills / (float) SLIDER_MAX_VALUE
@@ -796,23 +753,11 @@ public final strictfp class TerrainMenu extends Group {
                         + supplies_amount / (float) SLIDER_MAX_VALUE
                         + " | seed = "
                         + seed * seed);
-        String ai_string = Utils.getBundleString(bundle, "ai");
+    // ai string used via generateAINames()
         InGameInfo ingame_info =
                 multiplayer
                         ? new MultiplayerInGameInfo(game.getRandomStartPos(), game.isRated())
                         : new DefaultInGameInfo();
-    // If a manual map is selected and still exists, prefer that exact map
-    java.io.File mapFileArg = null;
-    if (!multiplayer && manualMapSelected && selectedMapFile != null) {
-        if (selectedMapFile.exists()) {
-        mapFileArg = selectedMapFile;
-        } else {
-        // Non-blocking notification + clear selection
-        try { System.out.println("Selected map missing at start: " + selectedMapFile); } catch (Throwable ignore) {}
-        clearManualMapSelection("file missing at start");
-        }
-    }
-
     GameNetwork game_network =
         Menu.startNewGameWithMap(
                         network,
@@ -837,7 +782,7 @@ public final strictfp class TerrainMenu extends Group {
                         ARCHIPELAGO[pulldown_size.getChosenItemIndex()],
             generateAINames(),
             player_count,
-            mapFileArg);
+            null);
         game_network
                 .getClient()
                 .getServerInterface()
@@ -879,20 +824,20 @@ public final strictfp class TerrainMenu extends Group {
         return ai_names;
     }
 
-    private final strictfp class MapcodeListener implements MouseClickListener {
+    private final class MapcodeListener implements MouseClickListener {
         public final void mouseClicked(int button, int x, int y, int clicks) {
             gui_root.addModalForm(new MapcodeForm(TerrainMenu.this));
         }
     }
 
-    private final strictfp class OKListener implements MouseClickListener {
+    private final class OKListener implements MouseClickListener {
         public final void mouseClicked(int button, int x, int y, int clicks) {
             boolean started = startGame();
             if (started) button_ok.setDisabled(true);
         }
     }
 
-    private final strictfp class DisableListener implements ItemChosenListener {
+    private final class DisableListener implements ItemChosenListener {
         int i;
 
         public DisableListener(int i) {
@@ -912,7 +857,7 @@ public final strictfp class TerrainMenu extends Group {
         }
     }
 
-    private final strictfp class PulldownUpdateMapcodeListener implements ItemChosenListener {
+    private final class PulldownUpdateMapcodeListener implements ItemChosenListener {
         public final void itemChosen(PulldownMenu menu, int item_index) {
             setMapcode();
             // Auto-clear manual map only for terrain-affecting pulldowns
@@ -924,14 +869,14 @@ public final strictfp class TerrainMenu extends Group {
         }
     }
 
-    private final strictfp class PulldownUpdatePlayersChangedListener
+    private final class PulldownUpdatePlayersChangedListener
             implements ItemChosenListener {
         public final void itemChosen(PulldownMenu menu, int item_index) {
             player_count = item_index + 1;
         }
     }
 
-    private final strictfp class PulldownUpdateSizeListener implements ItemChosenListener {
+    private final class PulldownUpdateSizeListener implements ItemChosenListener {
         public final void itemChosen(PulldownMenu menu, int item_index) {
             if (item_index == LARGE && !Renderer.isRegistered()) {
                 menu.chooseItem(MEDIUM);
@@ -957,7 +902,7 @@ public final strictfp class TerrainMenu extends Group {
         }
     }
 
-    private final strictfp class PulldownUpdateHardListener implements ItemChosenListener {
+    private final class PulldownUpdateHardListener implements ItemChosenListener {
         public final void itemChosen(PulldownMenu menu, int item_index) {
             if (item_index == HARD && !Renderer.isRegistered()) {
                 menu.chooseItem(NORMAL);
@@ -976,7 +921,7 @@ public final strictfp class TerrainMenu extends Group {
         }
     }
 
-    private final strictfp class PulldownUpdateTerrainListener implements ItemChosenListener {
+    private final class PulldownUpdateTerrainListener implements ItemChosenListener {
         public final void itemChosen(PulldownMenu menu, int item_index) {
             if (item_index == Game.TERRAIN_TYPE_VIKING && !Renderer.isRegistered()) {
                 menu.chooseItem(Game.TERRAIN_TYPE_NATIVE);
@@ -1002,141 +947,17 @@ public final strictfp class TerrainMenu extends Group {
         }
     }
 
-    private final strictfp class SliderUpdateMapcodeListener implements ValueListener {
+    private final class SliderUpdateMapcodeListener implements ValueListener {
         public final void valueSet(int value) {
             setMapcode();
             if (!multiplayer) onTerrainSettingChanged("slider changed");
         }
     }
 
-    // ---------- Manual map selection helpers ----------
-    private String currentMapLabel() {
-        if (!manualMapSelected || selectedMapSummary == null || selectedMapFile == null)
-            return "No map selected";
-        String name = (selectedMapSummary.name != null && selectedMapSummary.name.length() > 0)
-                ? selectedMapSummary.name
-                : selectedMapFile.getName();
-        String type = ServerMessageBundler.getTerrainTypeString(
-                selectedMapSummary.terrainType == Game.TERRAIN_TYPE_VIKING
-                        ? Game.TERRAIN_TYPE_VIKING
-                        : Game.TERRAIN_TYPE_NATIVE);
-        int n = Math.max(0, selectedMapSummary.size);
-        return name + "  (" + n + "x" + n + ", " + type + ")";
-    }
+    // Manual map selection helpers removed.
 
-    private void updateMapLabelUI() {
-        if (label_selected_map != null) label_selected_map.set(currentMapLabel());
-        if (button_clear_map != null) button_clear_map.setDisabled(!manualMapSelected);
-    }
-
-    private void clearManualMapSelection(String reason) {
-        selectedMapFile = null;
-        selectedMapSummary = null;
-        manualMapSelected = false;
-        try { System.out.println("Manual map selection cleared: " + reason); } catch (Throwable ignore) {}
-        updateMapLabelUI();
-    }
-
+    // No-op: retained for historical call sites; Single Player no longer clears manual maps.
     private void onTerrainSettingChanged(String reason) {
-        if (initializingUI) return;
-        if (manualMapSelected) {
-            try { System.out.println("Auto-clearing manual map due to terrain change: " + reason); } catch (Throwable ignore) {}
-            clearManualMapSelection("terrain settings changed");
-        }
-    }
-
-    // Simple modal dialog to choose a .ttmap from maps dir
-    private final class MapLoadDialog extends Form {
-        private final MultiColumnComboBox listBox;
-        private List<MapIO.MapSummary> summaries = java.util.Collections.emptyList();
-        private final Label metaLabel;
-        private final HorizButton open;
-        private final HorizButton cancel;
-
-        MapLoadDialog() {
-            super("Load Map");
-            ColumnInfo[] cols = new ColumnInfo[] {
-                new ColumnInfo("File", 220),
-                new ColumnInfo("Name", 220),
-                new ColumnInfo("Size", 80),
-                new ColumnInfo("Type", 120)
-            };
-            listBox = new MultiColumnComboBox(gui_root, cols, 450);
-            addChild(listBox);
-            listBox.place();
-            metaLabel = new Label("Select a .ttmap.", Skin.getSkin().getEditFont(), 540);
-            addChild(metaLabel);
-            metaLabel.place(listBox, BOTTOM_LEFT, Skin.getSkin().getFormData().getSectionSpacing());
-            open = new OKButton(100);
-            cancel = new CancelButton(100);
-            addChild(open);
-            addChild(cancel);
-            cancel.place(metaLabel, BOTTOM_RIGHT);
-            open.place(cancel, LEFT_MID);
-            compileCanvas();
-
-            refreshList();
-            listBox.addRowListener(new com.oddlabs.tt.guievent.RowListener() {
-                public void rowChosen(Object row_context) {
-                    if (row_context instanceof MapIO.MapSummary) updatePreview((MapIO.MapSummary) row_context);
-                }
-                public void rowDoubleClicked(Object row_context) { onOpen(); }
-            });
-            open.addMouseClickListener(new MouseClickListener() {
-                public void mouseClicked(int button, int x, int y, int clicks) { onOpen(); }
-            });
-            cancel.addMouseClickListener(new MouseClickListener() {
-                public void mouseClicked(int button, int x, int y, int clicks) { remove(); }
-            });
-        }
-
-        private void refreshList() {
-            summaries = MapIO.listMaps();
-            listBox.clear();
-            for (MapIO.MapSummary s : summaries) {
-                String file = s.file.getName();
-                String name = (s.name != null && s.name.length() > 0) ? s.name : "";
-                String size = (s.size > 0) ? (s.size + "x" + s.size) : "";
-                String type = ServerMessageBundler.getTerrainTypeString(
-                        s.terrainType == Game.TERRAIN_TYPE_VIKING ? Game.TERRAIN_TYPE_VIKING : Game.TERRAIN_TYPE_NATIVE);
-                Row row = new Row(
-                    new GUIObject[] {
-                        new Label(file, Skin.getSkin().getMultiColumnComboBoxData().getFont(), 220),
-                        new Label(name, Skin.getSkin().getMultiColumnComboBoxData().getFont(), 220),
-                        new Label(size, Skin.getSkin().getMultiColumnComboBoxData().getFont(), 80),
-                        new Label(type, Skin.getSkin().getMultiColumnComboBoxData().getFont(), 120)
-                    },
-                    s);
-                listBox.addRow(row);
-            }
-        }
-
-        private void updatePreview(MapIO.MapSummary s) {
-            StringBuilder sb = new StringBuilder();
-            sb.append(s.file.getName());
-            if (s.name != null && !s.name.isEmpty()) sb.append("\nName: ").append(s.name);
-            if (s.author != null && !s.author.isEmpty()) sb.append("\nAuthor: ").append(s.author);
-            if (s.description != null && !s.description.isEmpty()) sb.append("\nDesc: ").append(s.description);
-            sb.append("\nSize: ").append(s.size > 0 ? (s.size + "x" + s.size) : "?");
-            sb.append("\nTerrain: ").append(
-                ServerMessageBundler.getTerrainTypeString(
-                    s.terrainType == Game.TERRAIN_TYPE_VIKING ? Game.TERRAIN_TYPE_VIKING : Game.TERRAIN_TYPE_NATIVE));
-            metaLabel.set(sb.toString());
-        }
-
-        private void onOpen() {
-            Object ctx = listBox.getSelected();
-            if (!(ctx instanceof MapIO.MapSummary)) {
-                metaLabel.set("Choose a map first.");
-                return;
-            }
-            MapIO.MapSummary s = (MapIO.MapSummary) ctx;
-            selectedMapFile = s.file;
-            selectedMapSummary = s;
-            manualMapSelected = true;
-            updateMapLabelUI();
-            try { System.out.println("Selected map: " + selectedMapFile.getAbsolutePath()); } catch (Throwable ignore) {}
-            remove();
-        }
+        // Intentionally empty
     }
 }
